@@ -35,6 +35,8 @@ Chronological list of authors
   - David Caplan
   - Christian Beckstein (logo)
   - Sébastien Buchoux
+2012
+  - Lukas Grossar
 
 
 External code
